--- a/deploy/proglog/templates/service.yaml
+++ b/deploy/proglog/templates/service.yaml
@@ -1,15 +1,27 @@
+# This Service definition essentially configures a headless Service with ports for RPC and Serf (both TCP and UDP), 
+# and it selects Pods based on certain labels. The exact values for names, labels, and ports are determined by the Helm chart and its configuration.
+
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "proglog.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "proglog.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
+  clusterIP: None #headless service
+  publishNotReadyAddresses: true  
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+    - name: rpc
+      port: {{ .Values.rpcPort }}
+      targetPort: {{ .Values.rpcPort }}
+    - name: serf-tcp
+      protocol: "TCP"
+      port: {{ .Values.serfPort }}
+      targetPort: {{ .Values.serfPort }}
+    - name: serf-udp
+      protocol: "UDP"
+      port: {{ .Values.serfPort }}
+      targetPort: {{ .Values.serfPort }}    
   selector:
     {{- include "proglog.selectorLabels" . | nindent 4 }}
