--- a/deploy/proglog/templates/statefulset.yaml
+++ b/deploy/proglog/templates/statefulset.yaml
@@ -27,16 +27,9 @@ spec:
             cat > /var/run/proglog/config.yaml <<EOD
             data-dir: /var/run/proglog/data
             rpc-port: {{.Values.rpcPort}}
-            # Make sure the following three key-values are on one line each in
-            # your code. I split them across multiple lines to fit them in
-            # for the book.
-            bind-addr: \
-              "$HOSTNAME.proglog.{{.Release.Namespace}}.\svc.cluster.local:\
-                {{.Values.serfPort}}"
+            bind-addr: "$HOSTNAME.proglog.{{.Release.Namespace}}.svc.cluster.local:{{.Values.serfPort}}"
             bootstrap: $([ $ID = 0 ] && echo true || echo false)
-            $([ $ID != 0 ] && echo 'start-join-addrs: \
-              "proglog-0.proglog.{{.Release.Namespace}}.svc.cluster.local:\
-                {{.Values.serfPort}}"')
+            $([ $ID != 0 ] && echo 'start-join-addrs: "proglog-0.proglog.{{.Release.Namespace}}.svc.cluster.local:{{.Values.serfPort}}"')
             EOD   
         volumeMounts:
         - name: datadir
