--- a/deploy/proglog/templates/statefulset.yaml
+++ b/deploy/proglog/templates/statefulset.yaml
@@ -3,34 +3,37 @@ kind: StatefulSet
 metadata:
   name: {{ include "proglog.fullname" . }}
   namespace: {{ .Release.Namespace }}
-  labels: {{ include "proglog.labels" . | nindent 4 }}
+  labels: 
+{{- include "proglog.labels" . | nindent 4 }}
 spec:
   selector:
-    matchLabels: {{ include "proglog.selectorLabels" . | nindent 6 }}
+    matchLabels:
+{{- include "proglog.selectorLabels" . | nindent 6 }}
   serviceName: {{ include "proglog.fullname" . }}
   replicas: {{ .Values.replicas }}
   template:
     metadata:
       name: {{ include "proglog.fullname" . }}
-      labels: {{ include "proglog.labels" . | nindent 8 }}
+      labels:
+{{- include "proglog.labels" . | nindent 8 }}
     spec:
       # initContainers...
       initContainers:
       - name: {{ include "proglog.fullname" . }}-config-init
         image: busybox
         imagePullPolicy: IfNotPresent
-        command:          
+        command:
           - /bin/sh
           - -c
           - |-
             ID=$(echo $HOSTNAME | rev | cut -d- -f1 | rev)
             cat > /var/run/proglog/config.yaml <<EOD
             data-dir: /var/run/proglog/data
-            rpc-port: {{.Values.rpcPort}}
-            bind-addr: "$HOSTNAME.proglog.{{.Release.Namespace}}.svc.cluster.local:{{.Values.serfPort}}"
+            rpc-port: {{ .Values.rpcPort }}
+            bind-addr: "$HOSTNAME.proglog.{{ .Release.Namespace }}.svc.cluster.local:{{ .Values.serfPort }}"
             bootstrap: $([ $ID = 0 ] && echo true || echo false)
-            $([ $ID != 0 ] && echo 'start-join-addrs: "proglog-0.proglog.{{.Release.Namespace}}.svc.cluster.local:{{.Values.serfPort}}"')
-            EOD   
+            $([ $ID != 0 ] && echo 'start-join-addrs: "proglog-0.proglog.{{ .Release.Namespace }}.svc.cluster.local:{{ .Values.serfPort }}"')
+            EOD
         volumeMounts:
         - name: datadir
           mountPath: /var/run/proglog
